--- a/rpc-api/pom.xml
+++ b/rpc-api/pom.xml
@@ -7,6 +7,14 @@
     <groupId>com.quan</groupId>
     <artifactId>rpc-api</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.32</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 
 </project>
