--- a/rpc-core/pom.xml
+++ b/rpc-core/pom.xml
@@ -7,6 +7,13 @@
     <groupId>com.quan</groupId>
     <artifactId>rpc-core</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <dependencies>
+        <dependency>
+            <groupId>com.quan</groupId>
+            <artifactId>rpc-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 </project>
